# bank-system

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yml
libs/ypbank/: Cargo.toml
libs/ypbank_cli/: Cargo.toml
libs/ypbank_cli/src/: main.rs
libs/ypbank_transaction/: Cargo.toml  README.md
libs/ypbank_transaction/src/: bin_format.rs  csv_format.rs  errors.rs  lib.rs  main.rs  txt_format.rs
streaming_quotes_project/: Cargo.toml
streaming_quotes_project/src/: errors.rs  lib.rs
