[package]
name = "streaming_quotes_project"
version.workspace = true
edition.workspace = true
authors.workspace = true

[profile.dev]
opt-level = 0      # Отключает оптимизации, сохраняет переменные
debug = true       # Генерирует полную отладочную информацию
debug-assertions = true
split-debuginfo = "unpacked"

[[bin]]
name = "quote_server"    
path = "bin/server.rs"

[[bin]]
name = "quote_client"    
path = "bin/client.rs"

[dependencies]
rand = "0"
bincode = "1"
serde = { version = "1", features = ["derive"] }
socket2 = "0"
regex = "1"
log = "0"
serde_json = "1"
ctrlc = "3"
env_logger = "0"
clap = { version = "~4", features = ["derive"] }
